fix spacing

--- a/static/mobile.css
+++ b/static/mobile.css
@@ -7,4 +7,7 @@
         padding-right: 19%;
         padding-left: 19%;
     }
+    footer {
+        padding-bottom: 40%;
+    }
 }
